2011-02-01  Mario Sanchez Prada  <msanchez@igalia.com>

Reviewed by Martin Robinson.

        [Gtk] atk_text_set_caret_offset fails for list items
        https://bugs.webkit.org/show_bug.cgi?id=53388

        Allow using text ranges across list items.

        * accessibility/gtk/AccessibilityObjectAtk.cpp:
        (WebCore::AccessibilityObject::allowsTextRanges): Add list items
        to the list of accessibility objects supporting text ranges.
2011-02-01  Mario Sanchez Prada  <msanchez@igalia.com>

        Reviewed by Martin Robinson.

        [Gtk] atk_text_set_caret_offset fails for list items
        https://bugs.webkit.org/show_bug.cgi?id=53388

        Update unit test to check the fix for this bug.

        * tests/testatk.c:
        (testWebkitAtkCaretOffsets): Ensure setting the caret in a list
        item through the AtkText interface is possible.

Canonical link: https://commits.webkit.org/67349@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77235 268f45cc-cd09-0410-ab3c-d52691b4dbfc